<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wallet.WalletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_generate" />

        <LinearLayout
            android:id="@+id/layout_public_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_public_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_public_key" />

            <TextView
                android:id="@+id/txt_public_key"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:lines="3" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_recovery" />

        <LinearLayout
            android:id="@+id/layout_recover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lbl_recovery_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_recovery_phrase" />

            <TextView
                android:id="@+id/txt_recovery_phrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4" />

            <Button
                android:id="@+id/btn_copy_recovery_phrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/copy_to_clipboard"/>

            <TextView
                android:id="@+id/lbl_private_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_private_key" />

            <TextView
                android:id="@+id/txt_private_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4" />

            <Button
                android:id="@+id/btn_copy_private_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_to_clipboard"/>


        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>